# prism

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.claude/commands/: audit-seguranca.md  check-prd.md  ci.md  fase-atual.md  implementar.md  novo-crate.md  proto.md  testar-fase.md
.github/workflows/: build.yml
crates/prism-chat/: Cargo.toml
crates/prism-chat/src/: anchor.rs  gossip.rs  lib.rs  moderation.rs  ordering.rs  rate_limit.rs  vector_clock.rs
crates/prism-core/: Cargo.toml
crates/prism-core/src/: hash.rs  identity.rs  lib.rs  peer_reputation.rs
crates/prism-encoder/: Cargo.toml  build.rs  wrapper.h
crates/prism-encoder/src/: lib.rs  segmenter.rs  svc_layers.rs  svt_av1.rs
crates/prism-ingest/: Cargo.toml
crates/prism-ingest/src/: capture.rs  injector.rs  lib.rs  rtmp_server.rs
crates/prism-node/: Cargo.toml
crates/prism-node/src/: config.rs  lib.rs  main.rs  streamer_router.rs
crates/prism-node/src/classes/: class_a.rs  class_b.rs  class_c.rs  edge.rs  mod.rs
crates/prism-node/src/dht/: record.rs
crates/prism-node/src/erasure/: reed_solomon.rs
crates/prism-node/src/health/: benchmark.rs  mod.rs  vnodes.rs
crates/prism-node/src/relay/: failover.rs  mod.rs  tree.rs
crates/prism-node/src/sync/: mod.rs  nack.rs  playout.rs
crates/prism-node/src/transfer/: chunk.rs  chunk_receiver.rs  mod.rs
crates/prism-node/src/transport/: mod.rs  quic.rs  rate_limit.rs
crates/prism-node/tests/: scenario3_sybil_attack.rs
crates/prism-payments/: Cargo.toml
crates/prism-payments/src/: channel.rs  lib.rs  micropayment.rs  settlement.rs
crates/prism-player/: index.html  package-lock.json  package.json  vite.config.ts
crates/prism-player-mobile/: app.json  package.json
crates/prism-player-mobile/src/: App.tsx
crates/prism-player-mobile/src/modules/: HlsPlayer.ts  Notifications.ts  SecureKey.ts
crates/prism-player-mobile/src/screens/: DiscoverScreen.tsx  IdentityScreen.tsx  StreamScreen.tsx
crates/prism-player/src/: App.tsx
crates/prism-player/src/chat/: ChatInput.tsx  ChatView.tsx
crates/prism-player/src/discovery/: StreamList.tsx  useDhtDiscovery.ts
crates/prism-player/src/identity/: IdentityModal.tsx  useIdentity.test.ts  useIdentity.ts
crates/prism-player/src/player/: HlsPlayer.tsx
crates/prism-proto/: Cargo.toml  build.rs
crates/prism-proto/src/: lib.rs
crates/prism-studio/: index.html  package-lock.json  package.json
crates/prism-studio/src/: App.tsx
crates/prism-studio/src-tauri/: Cargo.toml  tauri.conf.json
crates/prism-studio/src-tauri/src/: commands.rs  events.rs  lib.rs  main.rs  onboarding.rs  rtmp_server.rs
crates/prism-studio/src/components/: ChatPanel.tsx  EarningsPanel.tsx  EncodeSettings.tsx  ModerationMenu.tsx  NetworkHealth.tsx  NodeTree.tsx  OBSGuide.tsx  Onboarding.tsx  Preview.tsx
crates/prism-telemetry/: Cargo.toml
crates/prism-telemetry/src/: aggregator.rs  collector.rs  lib.rs
docs/: guia-agente.md
docs/architecture/: clients.md  overview.md  stack.md  studio-pipeline.md
docs/guides/: running-studio-player.md
docs/prd/: fase-1-fundacao-p2p.md  fase-2-pipeline-video.md  fase-3-chat-identidade.md  fase-4-producao-resiliencia.md
proto/: anchor_record.proto  blocklist.proto  chat_message.proto  chunk_transfer.proto  hls_manifest.proto  nack_request.proto  node_record.proto  rs_fragment.proto  video_chunk.proto
tests/chaos/: scenario2_node_crash.sh
tests/load/: scenario1_10k_viewers.js
