[workspace]
members = [
    "crates/prism-core",
    "crates/prism-proto",
    "crates/prism-node",
    "crates/prism-encoder",
    "crates/prism-ingest",
    # prism-studio requires Tauri toolchain + WebView2; excluded from workspace tests.
    # Build separately: cd crates/prism-studio && npm run tauri dev
    # "crates/prism-studio/src-tauri",
]
resolver = "2"

