[package]
name = "prism-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
prism-core  = { path = "../prism-core" }
prism-proto = { path = "../prism-proto" }
libp2p      = { version = "0.54", features = ["gossipsub", "tokio", "macros"] }
tokio       = { version = "1", features = ["full"] }
dashmap     = "5"
lru         = "0.12"
prost       = "0.13"
anyhow      = "1"
thiserror   = "1"
tracing     = "0.1"
serde       = { version = "1", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand          = "0.8"
sha2        = "0.10"
hex         = "0.4"

[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["full", "test-util"] }
