[package]
name = "prism-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand          = "0.8"
sha2          = "0.10"
zeroize       = { version = "1", features = ["derive"] }
hex           = "0.4"
thiserror     = "1"
serde         = { version = "1", features = ["derive"] }
dashmap       = "5"
tracing       = "0.1"
anyhow        = "1"

[dev-dependencies]
tempfile = "3"
