[package]
name = "prism-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prism-node"
path = "src/main.rs"

[dependencies]
prism-core  = { path = "../prism-core" }
prism-proto = { path = "../prism-proto" }
tokio       = { version = "1", features = ["full"] }
libp2p      = { version = "0.54", features = [
    "kad", "quic", "noise", "yamux", "identify", "macros", "tokio"
] }
prost       = "0.13"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2          = "0.10"
hex           = "0.4"
clap        = { version = "4", features = ["derive"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow      = "1"
thiserror   = "1"
serde       = { version = "1", features = ["derive"] }
toml        = "0.8"
dashmap     = "5"
reed-solomon-erasure = "6"
axum        = "0.7"
bytes       = "1"
tower       = { version = "0.4", features = ["util"] }

[dev-dependencies]
tempfile = "3"
