[workspace]

[package]
name = "prism-studio"
version = "0.1.0"
edition = "2021"

[lib]
name = "prism_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "prism-studio"
path = "src/main.rs"

[dependencies]
prism-core   = { path = "../../prism-core" }
prism-ingest = { path = "../../prism-ingest" }
tauri        = { version = "2", features = [] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tokio        = { version = "1", features = ["full"] }
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
